--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -24,7 +27,9 @@
                     </div>
 
                     <select class="select">
+
                         <option value="">
+
                             Pune
                         </option>
                     </select>
@@ -66,7 +71,7 @@
         </div>
     </header>
     <div class="body" style="background-color: rgb(248 248 248);">
-        <div class="body-of-food" >
+        <div class="body-of-food">
             <p class="heading-about-food">Inspiration for your first order</p>
             <div class="impiration">
                 <div class="pizza">
@@ -348,6 +353,75 @@
                 </div>
             </div>
 
+        </div>
+
+    </div>
+    </div>
+
+    <div class="footer">
+        <div class="footer-container">
+            <div class="zomato-icon">
+                <h1>zomato</h1>
+            </div>
+            <div class="dropdown-bar">
+
+
+                <select class="select select-for-footer">
+                    <option value="">
+                        India
+                    </option>
+                </select>
+
+
+                <select class="select select-for-footer">
+
+                    <option value="">
+
+                        English
+                    </option>
+                </select>
+
+            </div>
+        </div>
+
+
+        <div class="panal1">
+
+
+            <ul>
+                <p> ABOUT ZOMATO</p>
+                <a href=""> Who We Are</a>
+                <a href=""> Blog</a>
+                <a href="">Work With Us</a>
+                <a href="">Investor Relations</a>
+                <a href=""> Report Fraud</a>
+                <a href=""> Contact Us</a>
+
+            </ul>
+
+            <ul>
+                <p> ZOMAVERSE</p>
+                <a href="">Zomato</a>
+                <a href="">Blinkit</a>
+                <a href="">Feeding India</a>
+                <a href="">Become an Affiliate</a>
+                <a href="">Hyperpure</a>
+                <a href="">Zomaland</a>
+
+            </ul>
+
+            <ul>
+                <p> FOR RESTAURANTS</p>
+                <a href="">Partner With Us</a>
+                <a href="">Apps For You</a>
+                <p> FOR ENTERPRISES</p>
+                <a href="">Zomato For Enterprise</a>
+
+
+
+            </ul>
+
+            <ul>
 
 
 
@@ -355,11 +429,19 @@
 
 
 
+                <p> LEARN MORE</p>
+                <a href=""> Privacy</a>
+                <a href="">Security</a>
+                <a href="">Your Orders</a>
+                <a href=""> Terms</a>
+                <a href=""> Returns & Replacements</a>
+                <a href="">M Sitemap</a>
 
+
+            </ul>
 
         </div>
     </div>
-
 </body>
 
 </html>
